# -2.1-BoxCollision

./: CMakeLists.txt
data/: elements.json
include/: image_sfml.h
src/: main.cpp
